Implement full-page plugins on Mac bug 35682 a=av sr=attinasi